kubernetes/hands-on/services-networking/manifests/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v2-service
  namespace: lab02
spec:
  type: ClusterIP
  selector:
    app: web
    version: v2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
